# transcribe-summarize

./: .gitattributes  .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  GUI_README.md  GUI_REORGANIZATION.md  INSTALL.md  LAUNCH_GUIDE.md  LINK_SUPPORT.md  OPTIMIZATION_SUMMARY.md  README.md  SAMPLE_OUTPUT.md  email_transcribe_financial.py  financial-transcribe.service  financial_transcribe_gui.py  install.py  install_mac_linux.sh  install_windows.bat  launch_gui.bat  launch_gui.sh  launch_universal.py  pyproject.toml  requirements.txt  run_app.py  run_mac_linux.sh  run_windows.bat  setup.cfg  setup.py  setup_financial_suite.bat  start_transcribe_service.sh  stop_transcribe_service.sh  summarize.sh  transcribe_financial.py
.github/workflows/: ci.yml
output/: audiomarex.mp4_summary.txt  audiomarex.mp4_transcript.txt  audiotest.mp3_summary.txt  audiotest.mp3_transcript.txt
tests/: test_utils.py
transcribe_summarize/: __init__.py  chunked_audio.py  transcribe_summarize.py  utils.py
transcribe_summarize.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web/: .gitignore  Dockerfile  README.md  app.py  deploy.sh  docker-compose.yml  requirements.txt  transcription_service.py
web/static/css/: style.css
web/static/js/: app.js  main.js
web/templates/: base.html  index.html  settings.html
