[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-summarize"
version = "0.1.0"
description = "A tool to transcribe and summarize audio/video content using OpenAI"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0",
    "requests>=2.0",
    "tqdm>=4.0",
    "yt-dlp>=2024.3.10",
]

[project.urls]
Homepage = "https://github.com/yourusername/transcribe-summarize"
Repository = "https://github.com/yourusername/transcribe-summarize.git"

[project.scripts]
transcribe-summarize = "src.transcribe_summarize:main"